2031 [OneClick] added option to mux the audio source file only if the codec is the same as requested
2029 [x264] --keyint will not be applied twice if specified in the custom command line

Changelog 2008 --> 2028

Main changes:
[x264] added target playback device option
       this option restricts or enforces x264 parameters if necessary
       as this option is more powerful as the downloadable x264 profiles they have been removed
[Lame] changed encoding modes to reflect valid values
       Warning: review custom lame presets as there is no full preset update path

Other changes:
[AVS Script Creator] added a selection box if opening an indexable file directly
[File Indexer] added MKV audio demuxer for FFMS
[HD Streams Extractor] cosmetic adjustment. Bug #3303116
[Job Queue] hide the pause button as it has no function. Bug #3296037
[M2TS Muxer] fixed m2v input handling
[M2TS Muxer] fixed splitting option. Bug #3294210
[MediaInfo] adjustment for recent mediainfo builds
[MediaInfo] introduce "Core" alias for DTSHD/DTSMA
[MKV Muxer] added TrueHD + DTS-HD/MA as supported audio input formats
[OggVorbis] removed channel remapping as it is not needed anymore
[OneClick] changed handling of failed automatic deinterlacing process
[x264] added --bluray-compat option (requires x264 rev 1935+)
[x264] changed --open-gop handling (requires x264 rev 1935+)
[x264] enhanced help
[x264] several adjustments


Changelog 1989 --> 2008

Main changes:
[One-Click]     if the source is a MKV file:
                - the audio files can be demuxed if using FFMS indexer
                - and target container is MKV the video track can be copied. Feature request #3024414
                  added therefore a "Keep original track" checkbox for the video in the settings
			    - and target container is MKV the subtitles will be copied
                - the chapters will be extracted and reapplied to the output